[metadata]
name = biotda
version = 0.0.1
author = Anastasiia Taraskina
author_email = senreiho@gmail.com
description = Topological data analysis for various genomic data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/reiho/TDA
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
include_package_data = True